infra-chart/templates/execpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafkaclient
spec:
  containers:
  - name: infra-helm
    image: solsson/kafka:0.11.0.0
    command:
      - sh
      - -c
      - "exec tail -f /dev/null"
