infra-chart/templates/kibana-els.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-lb
  namespace: logging
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  type: LoadBalancer
  ports:
  - name: kibana
    protocol: TCP
    port: 80
    targetPort: 5601

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.2.0
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
