infra-chart/templates/virtualservice.yaml
# A virtual service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-app-service
  namespace: istio-system
spec:
  hosts:
    - '*'
  gateways:
    - web-gateway
  http:
    - route:
      - destination:
          host: appdeployment-service.webapp-deploy.svc.cluster.local
          port:
            number: 80
